src/test/ui/feature-gates/feature-gate-linkage.stderr
error[E0658]: the `linkage` attribute is experimental and not portable across platforms (see issue #29603)
  --> $DIR/feature-gate-linkage.rs:12:5
   |
LL |     #[linkage = "extern_weak"] static foo: isize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(linkage)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
